tests/spectest/type-rec.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\ba\80\80\80\00\08\60"
  "\01\64\00\01\64\00\4e\02\60\01\64\02\00\60\00\01"
  "\64\01\4e\00\60\00\00\60\00\00\4e\03\60\00\00\60"
  "\00\00\60\00\00\60\01\64\08\01\64\08\4e\02\60\01"
  "\64\0a\00\60\00\01\64\09"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\01\64\01\00\60\00\00"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\01\64\01\00\60\00\00"
  )
  "unknown type"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\01\4e"
  "\02\60\00\00\5f\00\03\82\80\80\80\00\01\00\06\87"
  "\80\80\80\00\01\64\00\00\d2\00\0b\0a\88\80\80\80"
  "\00\01\82\80\80\80\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\06\87\80\80\80\00"
  "\01\64\00\00\d2\00\0b\0a\88\80\80\80\00\01\82\80"
  "\80\80\00\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8c\80\80\80\00\02\4e"
    "\02\60\00\00\60\00\00\60\00\00\03\82\80\80\80\00"
    "\01\02\06\87\80\80\80\00\01\64\00\00\d2\00\0b\0a"
    "\88\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8c\80\80\80\00\02\4e"
    "\02\60\00\00\60\00\00\60\00\00\03\82\80\80\80\00"
    "\01\02\06\87\80\80\80\00\01\64\01\00\d2\00\0b\0a"
    "\88\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "type mismatch"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\95\80\80\80\00\02\4e"
  "\02\60\00\00\5f\01\64\00\00\4e\02\60\00\00\5f\01"
  "\64\02\00\03\82\80\80\80\00\01\02\06\87\80\80\80"
  "\00\01\64\00\00\d2\00\0b\0a\88\80\80\80\00\01\82"
  "\80\80\80\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\c1\80\80\80\00\04\4e"
  "\02\60\00\00\5f\01\64\00\00\4e\02\60\00\00\5f\01"
  "\64\02\00\4e\02\60\00\00\5f\05\64\00\00\64\00\00"
  "\64\02\00\64\02\00\64\04\00\4e\02\60\00\00\5f\05"
  "\64\00\00\64\02\00\64\00\00\64\02\00\64\06\00\03"
  "\82\80\80\80\00\01\06\06\87\80\80\80\00\01\64\04"
  "\00\d2\00\0b\0a\88\80\80\80\00\01\82\80\80\80\00"
  "\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\95\80\80\80\00\02\4e"
    "\02\60\00\00\5f\01\64\00\00\4e\02\60\00\00\5f\01"
    "\64\00\00\03\82\80\80\80\00\01\02\06\87\80\80\80"
    "\00\01\64\00\00\d2\00\0b\0a\88\80\80\80\00\01\82"
    "\80\80\80\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\9f\80\80\80\00\03\4e"
    "\02\60\00\00\5f\01\64\00\00\4e\02\60\00\00\5f\01"
    "\64\00\00\4e\02\60\00\00\5f\01\64\02\00\03\82\80"
    "\80\80\00\01\04\06\87\80\80\80\00\01\64\02\00\d2"
    "\00\0b\0a\88\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8f\80\80\80\00\02\4e"
    "\02\60\00\00\5f\00\4e\02\5f\00\60\00\00\03\82\80"
    "\80\80\00\01\03\06\87\80\80\80\00\01\64\00\00\d2"
    "\00\0b\0a\88\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\92\80\80\80\00\02\4e"
    "\02\60\00\00\5f\00\4e\03\60\00\00\5f\00\60\00\00"
    "\03\82\80\80\80\00\01\02\06\87\80\80\80\00\01\64"
    "\00\00\d2\00\0b\0a\88\80\80\80\00\01\82\80\80\80"
    "\00\00\0b"
  )
  "type mismatch"
)
(module definition $M binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\01\4e"
  "\02\60\00\00\5f\00\03\82\80\80\80\00\01\00\07\85"
  "\80\80\80\00\01\01\66\00\00\0a\88\80\80\80\00\01"
  "\82\80\80\80\00\00\0b"
)
(module instance $M $M)
(register "M" $M)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\01\4e"
  "\02\60\00\00\5f\00\02\87\80\80\80\00\01\01\4d\01"
  "\66\00\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\01\4e"
  "\02\5f\00\60\00\00\02\87\80\80\80\00\01\01\4d\01"
  "\66\00\01"
)
(assert_unlinkable (module instance) "incompatible import type")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\02\87\80\80\80\00\01\01\4d\01\66\00\00"
)
(assert_unlinkable (module instance) "incompatible import type")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\92\80\80\80\00\03\4e"
  "\02\60\00\00\5f\00\4e\02\60\00\00\5f\00\60\00\00"
  "\03\83\80\80\80\00\02\00\04\04\85\80\80\80\00\01"
  "\70\01\01\01\07\87\80\80\80\00\01\03\72\75\6e\00"
  "\01\09\89\80\80\80\00\01\04\41\00\0b\01\d2\00\0b"
  "\0a\94\80\80\80\00\02\82\80\80\80\00\00\0b\87\80"
  "\80\80\00\00\41\00\11\02\00\0b"
)
(module instance)
(assert_return (invoke "run"))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\92\80\80\80\00\03\4e"
  "\02\60\00\00\5f\00\4e\02\5f\00\60\00\00\60\00\00"
  "\03\83\80\80\80\00\02\00\04\04\85\80\80\80\00\01"
  "\70\01\01\01\07\87\80\80\80\00\01\03\72\75\6e\00"
  "\01\09\89\80\80\80\00\01\04\41\00\0b\01\d2\00\0b"
  "\0a\94\80\80\80\00\02\82\80\80\80\00\00\0b\87\80"
  "\80\80\00\00\41\00\11\03\00\0b"
)
(module instance)
(assert_trap (invoke "run") "indirect call type mismatch")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8b\80\80\80\00\02\4e"
  "\02\60\00\00\5f\00\60\00\00\03\83\80\80\80\00\02"
  "\00\02\04\85\80\80\80\00\01\70\01\01\01\07\87\80"
  "\80\80\00\01\03\72\75\6e\00\01\09\89\80\80\80\00"
  "\01\04\41\00\0b\01\d2\00\0b\0a\94\80\80\80\00\02"
  "\82\80\80\80\00\00\0b\87\80\80\80\00\00\41\00\11"
  "\02\00\0b"
)
(module instance)
(assert_trap (invoke "run") "indirect call type mismatch")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\5f"
  "\00\60\01\64\00\00\03\82\80\80\80\00\01\01\06\87"
  "\80\80\80\00\01\64\01\00\d2\00\0b\0a\88\80\80\80"
  "\00\01\82\80\80\80\00\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8f\80\80\80\00\02\4e"
    "\02\5f\00\60\01\64\00\00\60\01\64\00\00\03\82\80"
    "\80\80\00\01\02\06\87\80\80\80\00\01\64\01\00\d2"
    "\00\0b\0a\88\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8b\80\80\80\00\02\4e"
    "\02\5f\00\60\00\00\60\00\00\03\82\80\80\80\00\01"
    "\02\06\87\80\80\80\00\01\64\01\00\d2\00\0b\0a\88"
    "\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "type mismatch"
)
